// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`yoo-input-group matches full coverage with all props enabled 1`] = `
<yoo-input-group class="input-condition input-group input-required" condition="" input-name="test" is-required="" label="Test Label" placeholder="Enter value" trailing-icon="">
  <!---->
  <span hidden="" slot="actions">
    🔍
  </span>
  <div class="label-wrapper">
    <label class="label-medium-medium" htmlfor="test">
      Test Label
      <strong>
        *
      </strong>
    </label>
  </div>
  <div class="field-wrapper">
    <div class="input-container">
      <input slot="input">
      <span class="trailing-icon"></span>
    </div>
  </div>
</yoo-input-group>
`;

exports[`yoo-input-group renders correctly with default props 1`] = `
<yoo-input-group class="input-group" input-name="test" label="Test Label">
  <!---->
  <div class="label-wrapper">
    <label class="label-medium-medium" htmlfor="test">
      Test Label
    </label>
  </div>
  <div class="field-wrapper">
    <div class="input-container"></div>
  </div>
</yoo-input-group>
`;
